        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/modelgen.h:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/modelgen.inl:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/modelgen.cpp:
        * MDE/GME/paradigms/PICML/interpreter/dds2ccm/Event_Creator.cpp:
        * MDE/GME/paradigms/PICML/interpreter/dds2ccm/dds2ccm_Component.idl:

Tue Dec 17 15:52:31 UTC 2013  Dennis Feiock  <dfeiock at iupui dot edu>

        * cuts/iccm/compiler/Provides_Svnt_Impl.cpp:

          Added support for inout parameters on interfaces

        * cuts/iccm/compiler/Servant_Impl.cpp:

          Fixed code generation for WString attributes

        * tests/iccm/compiler/tao/Smoke_Test.idl:

          Added inout parameters to interface

Thu Dec 12 05:29:09 UTC 2013  Dennis Feiock  <dfeiock at iupui dot edu>

        * cuts/iccm/compiler/Provides_Svnt_Impl.cpp:

          Added support for out variables

        * tests/iccm/compiler/tao/Smoke_Test.idl:

          Extended tests to include out variables on interfaces.

Thu Dec 12 04:35:16 UTC 2013  Dennis Feiock  <dfeiock at iupui dot edu>

        * cuts/iccm/compiler/Compiler.mpc:
        * cuts/iccm/compiler/Provides_Svnt_Impl.h:
        * cuts/iccm/compiler/Provides_Svnt_Impl.cpp:
        * cuts/iccm/compiler/Servant_Impl.cpp:

          Updated compiler to support more facet methods.  Currently all basic
          types, enums, and structs are supported as in variables.

        * tests/iccm/compiler/tao/Smoke_Test.idl:

          Expanded smoke test to include interface, uses, and provides.

Mon Aug 26 05:47:08 UTC 2013  James H. Hill  <hillj at cs dot iupui dot edu>

        * MDE/GME/paradigms/CHAOS/interpreters/codegen/codegen.mpc:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/Code_Generation.idl:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/BE_Impl_Generator_T.cpp:
        * MDE/GME/paradigms/PICML/interpreter/dds2ccm/dds2ccm_Component.idl: